Removing secure-me and adding h2 for tests.