@@ -9,16 +9,19 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.core.io.Resource;
-import org.springframework.http.*;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 import pw.react.backend.dao.CompanyRepository;
 import pw.react.backend.exceptions.ResourceNotFoundException;
-import pw.react.backend.exceptions.UnauthorizedException;
 import pw.react.backend.models.Company;
 import pw.react.backend.models.CompanyLogo;
-import pw.react.backend.services.*;
+import pw.react.backend.services.CompanyService;
+import pw.react.backend.services.LogoService;
 import pw.react.backend.web.CompanyDto;
 import pw.react.backend.web.UploadFileResponse;
 
@@ -38,13 +41,11 @@ public class CompanyController {
     public static final String COMPANIES_PATH = "/companies";
 
     private final CompanyRepository repository;
-    private final SecurityService securityService;
     private final CompanyService companyService;
     private LogoService companyLogoService;
 
-    public CompanyController(CompanyRepository repository, SecurityService securityService, CompanyService companyService) {
+    public CompanyController(CompanyRepository repository, CompanyService companyService) {
         this.repository = repository;
-        this.securityService = securityService;
         this.companyService = companyService;
     }
 
@@ -57,15 +58,12 @@ public class CompanyController {
     public ResponseEntity<Collection<CompanyDto>> createCompanies(@RequestHeader HttpHeaders headers,
                                                                   @Valid @RequestBody List<CompanyDto> companies) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            List<Company> createdCompanies = companies.stream().map(CompanyDto::convertToCompany).collect(toList());
-            List<CompanyDto> result = repository.saveAll(createdCompanies)
-                    .stream()
-                    .map(CompanyDto::valueFrom)
-                    .collect(toList());
-            return ResponseEntity.status(HttpStatus.CREATED).body(result);
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        List<Company> createdCompanies = companies.stream().map(CompanyDto::convertToCompany).toList();
+        List<CompanyDto> result = repository.saveAll(createdCompanies)
+                .stream()
+                .map(CompanyDto::valueFrom)
+                .toList();
+        return ResponseEntity.status(HttpStatus.CREATED).body(result);
     }
 
     private void logHeaders(@RequestHeader HttpHeaders headers) {
@@ -80,22 +78,16 @@ public class CompanyController {
     @GetMapping(path = "/{companyId}")
     public ResponseEntity<CompanyDto> getCompany(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyDto result = repository.findById(companyId)
-                    .map(CompanyDto::valueFrom)
-                    .orElseThrow(() -> new ResourceNotFoundException(String.format("Company with %d does not exist", companyId)));
-            return ResponseEntity.ok(result);
-        }
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(CompanyDto.EMPTY);
+        CompanyDto result = repository.findById(companyId)
+                .map(CompanyDto::valueFrom)
+                .orElseThrow(() -> new ResourceNotFoundException(String.format("Company with %d does not exist", companyId)));
+        return ResponseEntity.ok(result);
     }
 
     @GetMapping(path = "")
     public ResponseEntity<Collection<CompanyDto>> getAllCompanies(@RequestHeader HttpHeaders headers) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            return ResponseEntity.ok(repository.findAll().stream().map(CompanyDto::valueFrom).collect(toList()));
-        }
-        throw new UnauthorizedException("Request is unauthorized", COMPANIES_PATH);
+        return ResponseEntity.ok(repository.findAll().stream().map(CompanyDto::valueFrom).collect(toList()));
     }
 
     @PutMapping(path = "/{companyId}")
@@ -103,24 +95,17 @@ public class CompanyController {
     public void updateCompany(@RequestHeader HttpHeaders headers, @PathVariable Long companyId,
                               @Valid @RequestBody CompanyDto updatedCompany) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            companyService.updateCompany(companyId, CompanyDto.convertToCompany(updatedCompany));
-        } else {
-            throw new UnauthorizedException("Request is unauthorized", COMPANIES_PATH);
-        }
+        companyService.updateCompany(companyId, CompanyDto.convertToCompany(updatedCompany));
     }
 
     @DeleteMapping(path = "/{companyId}")
     public ResponseEntity<String> updateCompany(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            boolean deleted = companyService.deleteCompany(companyId);
-            if (!deleted) {
-                return ResponseEntity.badRequest().body(String.format("Company with id %s does not exists.", companyId));
-            }
-            return ResponseEntity.ok(String.format("Company with id %s deleted.", companyId));
+        boolean deleted = companyService.deleteCompany(companyId);
+        if (!deleted) {
+            return ResponseEntity.badRequest().body(String.format("Company with id %s does not exists.", companyId));
         }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        return ResponseEntity.ok(String.format("Company with id %s deleted.", companyId));
     }
 
     @PostMapping("/{companyId}/logo")
@@ -128,33 +113,26 @@ public class CompanyController {
                                                          @PathVariable Long companyId,
                                                          @RequestParam("file") MultipartFile file) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyLogo companyLogo = companyLogoService.storeLogo(companyId, file);
+        CompanyLogo companyLogo = companyLogoService.storeLogo(companyId, file);
 
-            String fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath()
-                    .path("/companies/" + companyId + "/logo/")
-                    .path(companyLogo.getFileName())
-                    .toUriString();
-            UploadFileResponse response = new UploadFileResponse(
-                    companyLogo.getFileName(),
-                    fileDownloadUri,
-                    file.getContentType(),
-                    file.getSize()
-            );
-            return ResponseEntity.status(HttpStatus.CREATED).body(response);
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        String fileDownloadUri = ServletUriComponentsBuilder.fromCurrentContextPath()
+                .path("/companies/" + companyId + "/logo/")
+                .path(companyLogo.getFileName())
+                .toUriString();
+        UploadFileResponse response = new UploadFileResponse(
+                companyLogo.getFileName(),
+                fileDownloadUri,
+                file.getContentType(),
+                file.getSize()
+        );
+        return ResponseEntity.status(HttpStatus.CREATED).body(response);
     }
 
     @GetMapping(value = "/{companyId}/logo", produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
     public @ResponseBody byte[] getLog(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
-            return companyLogo.getData();
-        }
-
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
+        return companyLogo.getData();
     }
 
     @Operation(summary = "Get logo for company")
@@ -162,26 +140,23 @@ public class CompanyController {
             @ApiResponse(
                     responseCode = "200",
                     description = "Get log by company id",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             ),
             @ApiResponse(
                     responseCode = "401",
                     description = "Unauthorized operation",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             )
     })
     @GetMapping(value = "/{companyId}/logo2")
     public ResponseEntity<Resource> getLogo2(@RequestHeader HttpHeaders headers, @PathVariable Long companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
+        CompanyLogo companyLogo = companyLogoService.getCompanyLogo(companyId);
 
-            return ResponseEntity.ok()
-                    .contentType(MediaType.parseMediaType(companyLogo.getFileType()))
-                    .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + companyLogo.getFileName() + "\"")
-                    .body(new ByteArrayResource(companyLogo.getData()));
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        return ResponseEntity.ok()
+                .contentType(MediaType.parseMediaType(companyLogo.getFileType()))
+                .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; filename=\"" + companyLogo.getFileName() + "\"")
+                .body(new ByteArrayResource(companyLogo.getData()));
     }
 
     @Operation(summary = "Delete logo for given company")
@@ -189,22 +164,19 @@ public class CompanyController {
             @ApiResponse(
                     responseCode = "204",
                     description = "Logo deleted",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             ),
             @ApiResponse(
                     responseCode = "401",
                     description = "Unauthorized operation",
-                    content = { @Content(mediaType = "application/json") }
+                    content = {@Content(mediaType = "application/json")}
             )
     })
     @DeleteMapping(value = "/{companyId}/logo")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void removeLogo(@RequestHeader HttpHeaders headers, @PathVariable String companyId) {
         logHeaders(headers);
-        if (securityService.isAuthorized(headers)) {
-            companyLogoService.deleteCompanyLogo(Long.parseLong(companyId));
-        }
-        throw new UnauthorizedException("Unauthorized access to resources.", COMPANIES_PATH);
+        companyLogoService.deleteCompanyLogo(Long.parseLong(companyId));
     }
 
 }
